test: add test users and apply code formatting
