# app/Http/Controllers/HolidayPlanController.php
@@ -1,13 +1,19 @@
 <?php
 
+declare(strict_types=1);
+
 namespace App\Http\Controllers;
 
 use App\Http\Requests\StoreHolidayPlanRequest;
 use App\Models\HolidayPlan;
 use Barryvdh\DomPDF\Facade\Pdf;
+use Illuminate\Database\Eloquent\Collection;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Response;
 use OpenApi\Annotations as OA;
+use phpDocumentor\Reflection\File;
 
-class HolidayPlanController extends Controller
+final class HolidayPlanController
 {
     /**
      * @OA\Info(
@@ -44,10 +50,9 @@ class HolidayPlanController extends Controller
      *         )
      *     )
      * )
-     *
      */
 
-    public function index()
+    public function index(): Collection
     {
         return HolidayPlan::all();
     }
@@ -73,17 +78,15 @@ class HolidayPlanController extends Controller
      * )
      */
 
-    public function store(StoreHolidayPlanRequest $request)
+    public function store(StoreHolidayPlanRequest $request): HolidayPlan
     {
         $holidayPlan = $request->validated();
         $holidayPlan['user_id'] = auth()->id();
-        $holidayPlan['date_from'] = date('y-m-d', strtotime($holidayPlan['date_from']));
-        $holidayPlan['date_to'] = date('y-m-d', strtotime($holidayPlan['date_to']));
+        $holidayPlan['date_from'] = date('Y-m-d', strtotime($holidayPlan['date_from']));
+        $holidayPlan['date_to'] = date('Y-m-d', strtotime($holidayPlan['date_to']));
         $holidayPlan['status'] = 'pending';
 
-        $finalHolidayPlan = HolidayPlan::create($holidayPlan);
-
-        return [$finalHolidayPlan];
+        return HolidayPlan::create($holidayPlan);
     }
 
     /**
@@ -104,51 +107,95 @@ class HolidayPlanController extends Controller
      *         @OA\JsonContent(ref="#/components/schemas/HolidayPlanResponse")
      *     ),
      *
-     *  @OA\Response(
-     *      response=404,
-     *      description="Holiday plan not found",
-     *      @OA\JsonContent(
-     *      type="array",
-     *      @OA\Items(
-     *      type="object",
-     *      example={"message":"Holiday plan not found"}
-     *      )
-     *     )
-     *  ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Holiday plan not found",
+     *              @OA\JsonContent(
+     *                  type="array",
+     *                  @OA\Items(
+     *                      type="object",
+     *                      example={"message":"Holiday plan not found"}
+     *                  )
+     *              )
+     *      ),
      *       @OA\Response(
-     *       response=401,
-     *       description="Unauthorized",
-     *       @OA\JsonContent(
-     *       type="array",
-     *       @OA\Items(
-     *       type="object",
-     *       example={"message":"Unauthorized"}
-     *        ))),
-     * )
+     *           response=401,
+     *           description="Unauthorized",
+     *           @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  example={"message":"Unauthorized"}
+     *            )
+     *           )
+     *        ),
+     *  )
      */
-    public function show(string $id)
+    public function show(string $id): HolidayPlan | JsonResponse
     {
         $holidayPlan = HolidayPlan::find($id);
+
         if (!$holidayPlan) {
             return response()->json(['message' => 'Holiday plan not found'], 404);
         }
+
         return HolidayPlan::find($id);
     }
 
-
-    public function getHolidayPdf($id)
+    /**
+     * @OA\Get(
+     *    path="/api/holiday/{id}/pdf",
+     *    summary="Get a holiday plan in PDF",
+     *    tags={"Holiday Plans"},
+     *    security={{"bearerAuth":{}}},
+     *    @OA\Parameter(
+     *        name="id",
+     *        in="path",
+     *        required=true,
+     *        description="ID of the holiday plan",
+     *    ),
+     *    @OA\Response(
+     *        response=200,
+     *        description="Success",
+     *        @OA\MediaType(
+     *            mediaType="application/pdf",
+     *        )
+     *    ),
+     * )
+     */
+    public function getHolidayPdf($id): Response | JsonResponse
     {
         $holidayPlan = HolidayPlan::find($id);
 
-        $pdf = PDF::loadView('holiday', ['holidayPlan' => $holidayPlan]);
-        return $pdf->download('holidaysPlans.pdf');
+        if (!$holidayPlan) {
+            return response()->json(['message' => 'Holiday plan not found'], 404);
+        }
+
+        return PDF::loadView('holiday', ['holidayPlan' => $holidayPlan])->download('holidaysPlans.pdf');
     }
 
-    public function getHolidaysPdf()
+
+    /**
+     * @OA\Get(
+     *     path="/api/holiday/pdf",
+     *     summary="Get all holiday plans in PDF",
+     *     tags={"Holiday Plans"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *          response=200,
+     *          description="Success",
+     *          @OA\MediaType(
+     *              mediaType="application/pdf",
+     *          )
+     *     ),
+     * )
+     */
+    public function getHolidaysPdf():Response
     {
         $holidayPlans = HolidayPlan::all();
-        $pdf = PDF::loadView('holidays_list', ['holidayPlans' => $holidayPlans]);
-        return $pdf->download('holidayPlans.pdf');
+
+        return PDF::loadView('holidays_list', ['holidayPlans' => $holidayPlans])
+            ->download('holidayPlans.pdf');
     }
 
 
@@ -175,41 +222,46 @@ class HolidayPlanController extends Controller
      *         @OA\JsonContent(ref="#/components/schemas/HolidayPlanResponse")
      *     ),
      *
-     *  @OA\Response(
-     *      response=404,
-     *      description="Holiday plan not found",
-     *      @OA\JsonContent(
-     *      type="array",
-     *      @OA\Items(
-     *      type="object",
-     *      example={"message":"Holiday plan not found"}
-     *      )
-     *     )
-     *  ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Holiday plan not found",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  example={"message":"Holiday plan not found"}
+     *              )
+     *          )
+     *      ),
      *       @OA\Response(
-     *       response=401,
-     *       description="Unauthorized",
-     *       @OA\JsonContent(
-     *       type="array",
-     *       @OA\Items(
-     *       type="object",
-     *       example={"message":"Unauthorized"}
-     *        ))),
+     *          response=401,
+     *          description="Unauthorized",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  example={"message":"Unauthorized"}
+     *              )
+     *          )
+     *      ),
      * )
      */
-    public function update(StoreHolidayPlanRequest $request, string $id)
+    public function update(StoreHolidayPlanRequest $request, string $id): JsonResponse | HolidayPlan
     {
         $holidayPlan = $request->validated();
         $holidayPlan['date_from'] = date('y-m-d', strtotime($holidayPlan['date_from']));
         $holidayPlan['date_to'] = date('y-m-d', strtotime($holidayPlan['date_to']));
 
         $finalHolidayPlan = HolidayPlan::find($id);
+
         if (!$finalHolidayPlan) {
             return response()->json(['message' => 'Holiday plan not found'], 404);
         }
+
         if ($finalHolidayPlan->user_id !== auth()->id()) {
             return response()->json(['message' => 'ou do not have permission to update this holiday plan'], 401);
         }
+
         $finalHolidayPlan->update($holidayPlan);
 
         return $finalHolidayPlan;
@@ -239,35 +291,39 @@ class HolidayPlanController extends Controller
      *              )
      *         )
      *     ),
-     * @OA\Response(
-     *     response=404,
-     *     description="Holiday plan not found",
-     *     @OA\JsonContent(
-     *     type="array",
-     *     @OA\Items(
-     *     type="object",
-     *     example={"message":"Holiday plan not found"}
-     *     )
-     *    )
-     * ),
      *      @OA\Response(
-     *      response=401,
-     *      description="Unauthorized",
-     *      @OA\JsonContent(
-     *      type="array",
-     *      @OA\Items(
-     *      type="object",
-     *      example={"message":"Unauthorized"}
-     *       ))),
+     *         response=404,
+     *         description="Holiday plan not found",
+     *         @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  example={"message":"Holiday plan not found"}
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthorized",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(
+     *                  type="object",
+     *                  example={"message":"Unauthorized"}
+     *              )
+     *          )
+     *       ),
      *
      * )
      */
-    public function destroy(string $id)
+    public function destroy(string $id): array | JsonResponse
     {
         $holidayPlan = HolidayPlan::find($id);
+
         if (!$holidayPlan) {
             return response()->json(['message' => 'Holiday plan not found'], 404);
         }
+
         $holidayPlan->delete();
 
         return ['message' => 'Holiday plan deleted successfully'];
